[gd_scene load_steps=22 format=3 uid="uid://d0rfojarbn7xn"]

[ext_resource type="Script" path="res://objects/scripts/obj_launcher.gd" id="1_y40bd"]
[ext_resource type="Script" path="res://objects/scripts/manipulation_area.gd" id="2_04gep"]
[ext_resource type="Texture2D" uid="uid://dirs2dd5eu157" path="res://assets/objects/launcher-head.png" id="3_qdlth"]
[ext_resource type="Texture2D" uid="uid://kcqqpgxtxfgd" path="res://assets/world/particle_rabbitstar_02.png" id="5_1bcr5"]
[ext_resource type="Texture2D" uid="uid://d0d3lllsh3b1j" path="res://assets/objects/launcher-spring-1x1.png" id="5_ajtm2"]
[ext_resource type="Texture2D" uid="uid://bwqh6m3b6dqbu" path="res://assets/objects/launcher-pointer-01.png" id="5_cyihl"]
[ext_resource type="Curve" uid="uid://nvtuhrdw7lfx" path="res://resources/launcher_dust_particle_scale.tres" id="6_u785i"]
[ext_resource type="Gradient" uid="uid://bhv5rtvnqecvx" path="res://resources/flashy_particle_color.tres" id="7_6do2e"]
[ext_resource type="Script" path="res://objects/deco/launcher-trail.gd" id="9_r6n7y"]
[ext_resource type="AudioStream" uid="uid://bwoc65kcsht37" path="res://audio/sfx/launcher_charge_up.ogg" id="10_xxatm"]
[ext_resource type="AudioStream" uid="uid://cfa6dwibtsv6d" path="res://audio/sfx/launcher_lock_in.ogg" id="11_br2cc"]
[ext_resource type="AudioStream" uid="uid://d1x2onislqwve" path="res://audio/sfx/launcher_lock_out.ogg" id="12_ig0bb"]
[ext_resource type="AudioStream" uid="uid://sneob2ermed2" path="res://audio/sfx/launcher_fully_charged.ogg" id="13_lm2lh"]
[ext_resource type="AudioStream" uid="uid://dpd3a424lfpws" path="res://audio/sfx/launcher_release_full.ogg" id="14_eex74"]
[ext_resource type="AudioStream" uid="uid://bivlwftyxt6f2" path="res://audio/sfx/launcher_release_half.ogg" id="15_x33c4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0pf4"]
size = Vector2(48, 59)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iyjux"]
height = 46.0

[sub_resource type="Animation" id="Animation_1m61e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spring:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, 11)]
}

[sub_resource type="Animation" id="Animation_s082k"]
resource_name = "charge_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spring:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.5, 0.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(24, 11), Vector2(24, 35)]
}

[sub_resource type="Animation" id="Animation_w1xy7"]
resource_name = "launch_full"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Spring:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(-2.7, -2.7, -2.7, -2.7, -2.7, -2.7, -2.7, -2.7, -2.7, -2.7, -2.7),
"update": 0,
"values": [Vector2(0.5, 0.2), Vector2(0.5, 0.675), Vector2(0.5, 0.335), Vector2(0.5, 0.58), Vector2(0.5, 0.42), Vector2(0.5, 0.542), Vector2(0.5, 0.458), Vector2(0.5, 0.521), Vector2(0.5, 0.484), Vector2(0.5, 0.511), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(-2.7, -2.7, -2.7, -2.7, -2.7, -2.7, -2.7, -2.7, -2.7, -2.7, -2.7),
"update": 0,
"values": [Vector2(24, 40), Vector2(24, -6), Vector2(24, 27), Vector2(24, 3), Vector2(24, 19), Vector2(24, 7), Vector2(24, 15), Vector2(24, 9), Vector2(24, 13), Vector2(24, 10), Vector2(24, 11)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"emit_particles"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_thog1"]
_data = {
"RESET": SubResource("Animation_1m61e"),
"charge_up": SubResource("Animation_s082k"),
"launch_full": SubResource("Animation_w1xy7")
}

[node name="Launcher" type="Node2D"]
script = ExtResource("1_y40bd")

[node name="Colli" type="AnimatableBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Colli"]
polygon = PackedVector2Array(0, 0, 12, 9, 36, 9, 48, 0, 48, 24, 34, 24, 34, 51, 14, 51, 14, 24, 0, 24)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(24, 18.5)
shape = SubResource("RectangleShape2D_y0pf4")

[node name="PhysicsManipulationArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 48
script = ExtResource("2_04gep")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicsManipulationArea2D"]
position = Vector2(24, 20)
shape = SubResource("CapsuleShape2D_iyjux")

[node name="Trail" type="Line2D" parent="."]
script = ExtResource("9_r6n7y")

[node name="Head" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(24, 11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_qdlth")

[node name="PointerSprite" type="Sprite2D" parent="Head"]
texture = ExtResource("5_cyihl")

[node name="Spring" type="Sprite2D" parent="."]
position = Vector2(24, 59)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_ajtm2")
offset = Vector2(0, -47)

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_thog1")
}
autoplay = "RESET"

[node name="ParticlesLeft" type="CPUParticles2D" parent="."]
self_modulate = Color(1, 1, 1, 0.6)
position = Vector2(11, 48)
emitting = false
amount = 2
lifetime = 0.8
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_1bcr5")
emission_shape = 3
emission_rect_extents = Vector2(1, 20)
direction = Vector2(-1, 1)
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
damping_min = 300.0
damping_max = 300.0
scale_amount_curve = ExtResource("6_u785i")
color_ramp = ExtResource("7_6do2e")

[node name="ParticlesRight" type="CPUParticles2D" parent="."]
self_modulate = Color(1, 1, 1, 0.6)
position = Vector2(37, 48)
emitting = false
amount = 2
lifetime = 0.8
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_1bcr5")
emission_shape = 3
emission_rect_extents = Vector2(1, 20)
direction = Vector2(1, 1)
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
damping_min = 300.0
damping_max = 300.0
scale_amount_curve = ExtResource("6_u785i")
color_ramp = ExtResource("7_6do2e")

[node name="Audio" type="Node" parent="."]

[node name="ChargeUp" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_xxatm")
volume_db = -34.711
bus = &"GameSound"

[node name="LockIn" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("11_br2cc")
volume_db = -40.0
bus = &"GameSound"

[node name="LockOut" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("12_ig0bb")
volume_db = -12.396
bus = &"GameSound"

[node name="FullyCharged" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("13_lm2lh")
volume_db = -24.794
bus = &"GameSound"

[node name="ReleaseFull" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("14_eex74")
volume_db = -16.529
bus = &"GameSound"

[node name="Release" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("15_x33c4")
volume_db = -28.925
bus = &"GameSound"
